--- a/hukuki/src/app/components/home/home.component.css
+++ b/hukuki/src/app/components/home/home.component.css
@@ -1104,7 +1104,15 @@ Copyright CSS
 /*==========================================================================
 Pricing CSS
 ==========================================================================*/
-
+.text-block {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+  background-color: rgba(0, 0, 0, 0);
+  color: white;
+  padding-left: 20px;
+  padding-right: 20px;
+}
 .pricing-item {
 	background: #fff;
 	padding: 45px;
