--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -12,7 +12,11 @@
 
 
 	<!-- Preloader end -->
+
+ 
 	<!-- Top Bar Start -->
+ 
+
 	<div class="top-bar">
 		<div class="container">
 			<div class="row align-items-center">
@@ -108,6 +112,7 @@
 				<div class="menu-logo">
 					<a href="index.html">
 						<img src="assets/img/logo.png" alt="">
+						 
 					</a>
 					<p class="pt-30">Here are many variations of passages onsectetur adipisicing elit. Voluptate, odio cupiditate? Illum, quos eos nihil harum et, id architecto dolore eius dolores culpa eveniet assumenda iusto repudiandae.</p>
 				</div>
@@ -138,36 +143,57 @@
 		<!-- Hamburger Menu Start -->
 	</div>
 	<!-- Header Menu End -->
+
+ 
+	
+
 	<!-- Banner Area Start -->
 	<div class="banner-area banner-group">
-		<div class="single-slider">
-			<div class="container">
-				<div class="row">
-					<div class="col-xl-12 col-lg-12">
-						<div class="slider-content"> <span class="section-top">// We are the best</span>
-							<h2>We solve legal problems</h2>
-							<p>Here are many variations of passages consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-							<div class="banner-btn"> <a class="attoyer-btn" href="#">Free Consultation</a>
-							</div>
-						</div>
-					</div>
-				</div>
+		
+  <owl-carousel-o [options]="customOptions">
+    <ng-template carouselSlide>   
+			<img src="../../../assets/img/banner-1.png" alt="this is the first alt">
+			<div class="text-block">
+				<h4>Nature</h4>
+				<p>What a beautiful sunrise</p>
 			</div>
-		</div>
-		<div class="single-slider bg-img">
-			<div class="container">
-				<div class="row">
-					<div class="col-xl-12 col-lg-12">
-						<div class="slider-content"> <span class="section-top">// We are the best</span>
-							<h2>We solve legal problems</h2>
-							<p>Here are many variations of passages consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore</p>
-							<div class="banner-btn"> <a class="attoyer-btn" href="#">Free Consultation</a>
-							</div>
-						</div>
-					</div>
-				</div>
-			</div>
-		</div>
+
+		</ng-template>
+				 
+    <ng-template carouselSlide> 
+			<img src="../../../assets/img/banner-2.png"
+			alt="this is the first al"> 
+
+		</ng-template>
+		<ng-template carouselSlide> 
+			<img src="../../../assets/img/banner-1.png" alt="this is the first alt" >
+			 
+
+		</ng-template>  
+  </owl-carousel-o>
+
+
+	<!-- <div>Some tags before</div>
+  <owl-carousel-o [options]="customOptions">
+
+    <ng-container *ngFor="let slide of slidesStore">
+      <ng-template carouselSlide [id]="slide.id">
+        <img [src]="slide.src"   [title]="slide.title"
+				
+				>
+      </ng-template>
+    </ng-container>
+
+  </owl-carousel-o>
+  <div>Some tags after</div> -->
+
+
+
+
+
+
+   
+		 
 	</div>
 	<!-- Banner Area End -->
 	<!-- About Area Start -->
@@ -454,6 +480,9 @@
 			</div>
 		</div>
 	</div>
+
+
+
 	<!-- Copyright Area End -->
 	<!-- scroll_up_btn -->
 	<div class="scroll-top"> <i class="flaticon-up-arrow"></i>
