--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -119,7 +119,7 @@
 				<div class="contact-info pt-30">
 					<h3 class="mb-25">Contact Info</h3>
 					<div class="contact-box"> <i class="flaticon-call"></i>+(141 - 589 - 548</div>
-					<div class="contact-box">	<i class="flaticon-envelope"></i>infoattoyer@gmail.com</div>
+					<div class="contact-box">	<i class="flaticon-envelope"></i>infoattoyer@gmail.com 31</div>
 					<div class="contact-box"> <i class="flaticon-placeholder"></i> 7935 Springs, NY</div>
 				</div>
 				<div class="follow-us pt-30">
