--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -274,6 +274,160 @@
 				</div>
 			</div>
 		</div>
+
+<!-- Slider denemesi-->
+ <div class="container">
+	<div class="row">
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+		
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+		
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+		
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+		
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+	</div>
+
+	<div class="row">
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+		
+		<div class="col-md ">
+			<div class="card" style="width: 20rem ;height: 18rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
+				<div class="card-body">
+				  <h4 class="card-text" >Aile Hukuku</h4>
+				</div>
+			</div>	 	
+		</div>
+	</div>
+ </div>
+
+
+
+
+<!-- 
+
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-xl-12 col-lg-12">
@@ -308,7 +462,10 @@
 					</div>
 				</div>
 			</div>
-		</div>
+		</div> -->
+
+
+
 	</div>
 	<!-- Services Area End -->
 	<!-- Counter Area Start -->
