--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -282,7 +282,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >Aile Hukuku 31</h4>
 				</div>
 			</div>	 	
 		</div>
