--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -24,7 +24,7 @@
 					<div class="top-left d-i-block">
 						<ul>
 							<li><a href="#"><i class="flaticon-call"></i></a> +(141 - 589 - 548</li>
-							<li><a href="#"><i class="flaticon-envelope"></i></a> infoattoyer@gmail.com</li>
+							<li><a href="#"><i class="flaticon-envelope"></i></a> infoattoyer@gmail.com 25</li>
 						</ul>
 					</div>
 				</div>
@@ -117,7 +117,7 @@
 					<p class="pt-30">Here are many variations of passages onsectetur adipisicing elit. Voluptate, odio cupiditate? Illum, quos eos nihil harum et, id architecto dolore eius dolores culpa eveniet assumenda iusto repudiandae.</p>
 				</div>
 				<div class="contact-info pt-30">
-					<h3 class="mb-25">Contact Info</h3>
+					<h3 class="mb-25">Contact Info ssg</h3>
 					<div class="contact-box"> <i class="flaticon-call"></i>+(141 - 589 - 548</div>
 					<div class="contact-box">	<i class="flaticon-envelope"></i>infoattoyer@gmail.com 31</div>
 					<div class="contact-box"> <i class="flaticon-placeholder"></i> 7935 Springs, NY</div>
