--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -277,147 +277,220 @@
 
 <!-- Slider denemesi-->
  <div class="container">
-	<div class="row">
+	<div class="row card-row-size">
 		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku 31</h4>
-				</div>
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/aile.jpeg" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+						 
+					<h4 class="card-text-style" style="color: white">
+						Aile hukuku
+					</h4>
+				  </div>
+				  </div>
 			</div>	 	
 		</div>
 
 		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style" >
+						Ceza hukuku
+					</h4>
+				  </div>
+				  </div>
 			</div>	 	
 		</div>
 		
 		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						Vakiflar ve Dernekler hukuku
+					</h4>
+				  </div>
+				  </div>
+			</div>	 	
+		</div>
+	</div>
+	<div class="row card-row-size">
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						Sirketler hukuku
+					</h4>
+				  </div>
+				  </div>
+			</div>	 	
+		</div>
+
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/gayri.jpeg" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style"  >
+						Gayrimenkul hukuku
+					</h4>
+				  </div>
+				  </div>
+			</div>	 	
+		</div>
+		
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/insaat.jpeg" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style"  >
+						Kooperatif ve Insaat hukuku
+					</h4>
+				  </div>
+				  </div>
+			</div>	 	
+		</div>
+	</div>
+	<div class="row card-row-size">
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						Borclar hukuku
+					</h4>
+				  </div>
+				  </div>
+			</div>	 	
+		</div>
+
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						Kamulaştırma ve Kat mulkiyeti hukuku
+					</h4>
+				  </div>
+				  </div>
+			</div>	 	
+		</div>
+		
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						İs ve sosyal guvenlik hukuku
+					</h4>
+				  </div>
+				  </div>
+			</div>	 	
+		</div>
+	</div>
+	<div class="row card-row-size">
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						İcra ve iflas hukuku
+					</h4>
+				  </div>
+				  </div>
+			</div>	 	
+		</div>
+
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						Yabancilar hukuku
+					</h4>
+				  </div>
+				  </div>
+			</div>	 	
+		</div>
+		
+		<div class="col-md ">
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						Tuketici hukuku
+					</h4>
+				  </div>
+				  </div>
 			</div>	 	
 		</div>
 	</div>
 
-	<div class="row">
+	<div class="row card-row-size">
 		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						Idari Davalar
+					</h4>
+				  </div>
+				  </div>
 			</div>	 	
 		</div>
 
 		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						Vergi uyuzmazliklari
+					</h4>
+				  </div>
+				  </div>
 			</div>	 	
 		</div>
 		
 		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
-			</div>	 	
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
-			</div>	 	
-		</div>
-
-		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
-			</div>	 	
-		</div>
-		
-		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
-			</div>	 	
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
-			</div>	 	
-		</div>
-
-		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
-			</div>	 	
-		</div>
-		
-		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
-			</div>	 	
-		</div>
-	</div>
-
-	<div class="row">
-		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
-			</div>	 	
-		</div>
-
-		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
-			</div>	 	
-		</div>
-		
-		<div class="col-md ">
-			<div class="card" style="width: 20rem ;height: 18rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
-				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
-				</div>
+			<div class="card" style="width: 22rem ;height: 15rem;">
+				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<div class="card-img-overlay">
+					<h5 class="card-title"></h5>
+					<div class="card-footer text-center">
+					<h4 class="card-text-style">
+						Ceza hukuku
+					</h4>
+				  </div>
+				  </div>
 			</div>	 	
 		</div>
 	</div>
