navbar ve üstü degisti

--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -20,30 +20,16 @@
 	<div class="top-bar">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-xl-6 col-lg-6 col-md-8">
+				<div class="col-xl-12 col-lg-12 col-md-14">
 					<div class="top-left d-i-block">
 						<ul>
-							<li><a href="#"><i class="flaticon-call"></i></a> +(141 - 589 - 548</li>
-							<li><a href="#"><i class="flaticon-envelope"></i></a> infoattoyer@gmail.com 25</li>
+							<li><a href="#"><i class=""></i></a>Ömerağa Mah. Alemdar Cad. Beyazhan İşhanı no 43 İzmit Kocaeli</li>
+							<li><a href="#"><i class="flaticon-call"></i></a> 0537 329 3216 / 0541 540 9232</li>
+							<li><a href="#"><i class="flaticon-envelope"></i></a> safahukuk@yahoo.com</li>
 						</ul>
 					</div>
 				</div>
-				<div class="col-xl-6 col-lg-6 col-md-4">
-					<div class="top-right d-i-block text-right">
-						<ul>
-							<li><a href="#"><i class="flaticon-facebook-app-symbol"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-twitter"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-linkedin"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-vimeo"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-instagram"></i></a>
-							</li>
-						</ul>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 	</div>
@@ -52,15 +38,13 @@
 	<div class="header-menu">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-xl-2 col-lg-2 col-md-7">
+				<div class="col-xl-3 col-lg-3 col-md-8">
 					<div class="menu-logo">
-						<a href="index.html">
-							<img src="assets/img/logo.png" alt="">
-						</a>
+						<h1>Safa Hukuk </h1>
 					</div>
 					<div class="responsive-menu"></div>
 				</div>
-				<div class="col-xl-9 col-lg-9 col-md-2">
+				<div class="col-xl-7 col-lg-6 col-md-2">
 					<div class="main-menu">
 						<ul id="mobilemenu">
 							<li class="menu-icon"><a href="#">Home</a>
@@ -69,7 +53,7 @@
 									</li>
 								</ul>
 							</li>
-							<li class="menu-icon"><a href="#">Services</a>
+							<li class="menu-icon"><a href="#">Faaliyet Alanlarımız</a>
 								<ul class="submenu">
 									<li><a href="services-1.html"><i class="flaticon-double-right-arrows-angles"></i> Services-1</a>
 									</li>
@@ -77,31 +61,13 @@
 									</li>
 								</ul>
 							</li>
-						 
-							<li class="menu-icon"><a href="contact.html">Contact</a>
-							</li>
+							<li class="menu-icon"><a href="contact.html">Hakkımızda</a></li>
+							
+							<li class="menu-icon"><a href="contact.html">İletişim</a></li>
 						</ul>
 					</div>
 				</div>
-				<div class="col-xl-1 col-lg-1 col-md-3">
-					<div class="menu-icon">
-						<ul class="d-flex">
-							<li><span class="search-icon open"><i class="flaticon-search"></i></span>
-							</li>
-							<li>
-								<div class="hamburger-icon"> <i class="flaticon-menu"></i>
-								</div>
-							</li>
-						</ul>
-					</div>
-					<div class="search-box">
-						<form>
-							<input type="search" placeholder="Search Here.....">
-							<button type="submit"><i class="flaticon-search"></i>
-							</button>
-						</form> <span class="search-box-icon"><i class="flaticon-close"></i></span>
-					</div>
-				</div>
+				
 			</div>
 		</div>
 		<!-- Hamburger Menu Start -->
@@ -282,7 +248,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku 31</h4>
+				  <h4 class="card-text" >Şirketler ve Marka Hukuku</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -291,7 +257,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >Gayrimenkul Hukuku</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -311,7 +277,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >Kooperatif ve İnşaat Hukuku</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -320,7 +286,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >Borçlar ve Hukuku</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -329,7 +295,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >Kamulaştırma ve Kat Mülkiyeti </h4>
 				</div>
 			</div>	 	
 		</div>
@@ -340,7 +306,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >İş ve Sosyal Güvenlik Hukuku</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -358,7 +324,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >İcra ve İflas Hukuku</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -369,7 +335,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >Vakıflar ve Dernekler Hukuku</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -378,7 +344,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >Yabancılar Hukuku</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -387,7 +353,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >Ceza Hukuku</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -398,7 +364,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >Tüketici Hukuku</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -407,7 +373,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >İdari Davalar</h4>
 				</div>
 			</div>	 	
 		</div>
@@ -416,7 +382,7 @@
 			<div class="card" style="width: 20rem ;height: 18rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  >
 				<div class="card-body">
-				  <h4 class="card-text" >Aile Hukuku</h4>
+				  <h4 class="card-text" >Vergi Uyuşmazlıkları</h4>
 				</div>
 			</div>	 	
 		</div>
