türkcelestirip degisiklikler yaptim

--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -185,15 +185,13 @@
 				<div class="col-xl-6 col-lg-6">
 					<div class="s-table">
 						<div class="s-tablec">
-							<div class="section-title section-title-right"> <span class="section-top">//  About Us</span>
-								<h2>We're top law Company in last 10 years</h2>
-								<p class="pt-30 pb-35">Here are many variations of passages consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud Here are many variations of passages consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore</p>
+							<div class="section-title section-title-right"> <span class="section-top">// Hakkımızda</span>
+								<h2>Safa Hukuk Bürosu</h2>
+								<p class="pt-30 pb-35"></p>
 								<div class="about-buttom d-sm-flex">
 									<div class="about-btn"> <a class="attoyer-btn all-btn mr-100" href="#">Discover More</a>
 									</div>
-									<div class="about-signa">
-										<img src="assets/img/signature.png" alt="">
-									</div>
+									
 								</div>
 							</div>
 						</div>
@@ -208,18 +206,18 @@
 	<div class="solution-area section-padding">
 		<div class="container">
 			<div class="row align-items-center">
-				<div class="col-xl-6 col-lg-6 col-md-12 md-mb-30">
+				<div class="col-xl-7 col-lg-6 col-md-12 md-mb-30">
 					<div class="section-title-left">
-						<h2>We are always ready for your solution</h2>
+						<h2>Her zaman yanınızdayız.</h2>
 					</div>
 				</div>
-				<div class="col-xl-6 col-lg-6 col-md-12">
+				<div class="col-xl-5 col-lg-6 col-md-12">
 					<div class="solution-right">
 						<div class="solution-icon">
 							<div class="icon"><i class="flaticon-call"></i>
 							</div>
 							<div class="solution-number">
-								<p>+ (141 - 589 - 548</p>
+								<p>0541 540 9232</p>
 							</div>
 						</div>
 					</div>
@@ -234,8 +232,8 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-12 col-lg-12">
-					<div class="section-title"> <span class="section-top">// Services</span>
-						<h2>Our Practice Area</h2>
+					<div class="section-title"> <span class="section-top"></span>
+						<h2>Faaliyet Alanlarımız</h2>
 					</div>
 				</div>
 			</div>
@@ -252,7 +250,7 @@
 					<div class="card-footer text-center">
 						 
 					<h4 class="card-text-style" style="color: white">
-						Aile hukuku
+						Aile Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -266,7 +264,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style" >
-						Ceza hukuku
+						Ceza Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -280,7 +278,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						Vakiflar ve Dernekler hukuku
+						Vakıflar ve Dernekler Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -295,7 +293,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						Sirketler hukuku
+						Şirketler Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -309,7 +307,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style"  >
-						Gayrimenkul hukuku
+						Gayrimenkul Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -323,7 +321,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style"  >
-						Kooperatif ve Insaat hukuku
+						Kooperatif ve İnşaat Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -338,7 +336,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						Borclar hukuku
+						Borçlar Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -352,7 +350,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						Kamulaştırma ve Kat mulkiyeti hukuku
+						Kamulaştırma ve Kat Mülkiyeti Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -366,7 +364,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						İs ve sosyal guvenlik hukuku
+						İş ve Sosyal Güvenlik Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -381,7 +379,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						İcra ve iflas hukuku
+						İcra ve İflas Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -395,7 +393,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						Yabancilar hukuku
+						Yabancılar Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -409,7 +407,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						Tuketici hukuku
+						Tüketici Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -425,7 +423,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						Idari Davalar
+						İdari Davalar
 					</h4>
 				  </div>
 				  </div>
@@ -439,13 +437,12 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						Vergi uyuzmazliklari
+						Vergi Uyuşmazlıkları
 					</h4>
 				  </div>
 				  </div>
 			</div>	 	
 		</div>
-		
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
 				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
@@ -453,7 +450,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						Ceza hukuku
+						Ceza Hukuku
 					</h4>
 				  </div>
 				  </div>
@@ -571,15 +568,15 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-7 col-lg-8">
-					<div class="section-title-left"> <span class="section-top">// Why Choose Ua</span>
-						<h2 class="mb-55">Why We different from others</h2>
+					<div class="section-title-left"> <span class="section-top">// Neden Safa Hukuk ? </span>
+						<h2 class="mb-55">Neden bizi tercih etmelisiniz ?</h2>
 						<div class="row">
 							<div class="col-lg-6 col-md-6 mb-40">
 								<div class="choose-item d-inline-flex">
 									<div class="choose-icon"> <i class="flaticon-checked"></i>
 									</div>
 									<div class="choose-content">
-										<h3>Experts in Law</h3>
+										<h3>Alanında Uzman</h3>
 										<p>Excepteur sint occaecat cupidatat proident, sunt in</p>
 									</div>
 								</div>
@@ -589,7 +586,7 @@
 									<div class="choose-icon"> <i class="flaticon-checked"></i>
 									</div>
 									<div class="choose-content">
-										<h3>Always Win Case</h3>
+										<h3>Hızlı ve Kaliteli </h3>
 										<p>Excepteur sint occaecat cupidatat proident, sunt in</p>
 									</div>
 								</div>
@@ -599,7 +596,7 @@
 									<div class="choose-icon"> <i class="flaticon-checked"></i>
 									</div>
 									<div class="choose-content">
-										<h3>Group of Lawyers</h3>
+										<h3>Güvenilir</h3>
 										<p>Excepteur sint occaecat cupidatat proident, sunt in</p>
 									</div>
 								</div>
@@ -609,7 +606,7 @@
 									<div class="choose-icon"> <i class="flaticon-checked"></i>
 									</div>
 									<div class="choose-content">
-										<h3>Immigration Laws </h3>
+										<h3>Başarılı</h3>
 										<p>Excepteur sint occaecat cupidatat proident, sunt in</p>
 									</div>
 								</div>
@@ -671,7 +668,7 @@
 			<div class="row">
 				<div class="col-xl-12 col-lg-12">
 					<div class="copyright-content">
-						<p>© 2021. Attoyer All rights reserved</p>
+						<p>© 2022. Safa Hukuk. Tüm Hakları Saklıdır.</p>
 					</div>
 				</div>
 			</div>
