--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -47,7 +47,7 @@
 				<div class="col-xl-9 col-lg-7 col-md-3">
 					<div class="main-menu">
 						<ul id="mobilemenu">
-							<li class="menu-icon"><a href="#">Home</a>
+							<li class="menu-icon"><a href="#">Anasayfa</a>
 								<ul class="submenu">
 									<li><a href="index.html"><i class="flaticon-double-right-arrows-angles"></i> Home style 1</a>
 									</li>
@@ -70,43 +70,7 @@
 				
 			</div>
 		</div>
-		<!-- Hamburger Menu Start -->
-		<div class="hamburger-popup">
-			<div class="hamburger-close-btn">	<i class="flaticon-close"></i>
-			</div>
-			<div class="menu-box">
-				<div class="menu-logo">
-					<a href="index.html">
-						<img src="assets/img/logo.png" alt="">
-						 
-					</a>
-					<p class="pt-30">Here are many variations of passages onsectetur adipisicing elit. Voluptate, odio cupiditate? Illum, quos eos nihil harum et, id architecto dolore eius dolores culpa eveniet assumenda iusto repudiandae.</p>
-				</div>
-				<div class="contact-info pt-30">
-					<h3 class="mb-25">Contact Info ssg</h3>
-					<div class="contact-box"> <i class="flaticon-call"></i>+(141 - 589 - 548</div>
-					<div class="contact-box">	<i class="flaticon-envelope"></i>infoattoyer@gmail.com 31</div>
-					<div class="contact-box"> <i class="flaticon-placeholder"></i> 7935 Springs, NY</div>
-				</div>
-				<div class="follow-us pt-30">
-					<h3 class="mb-25">Follow Us</h3>
-					<div class="widget social-icon d-i-block">
-						<ul class="footer-social">
-							<li><a href="#"><i class="flaticon-facebook-app-symbol"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-twitter"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-instagram"></i></a>
-							</li>
-							<li><a href="#"><i class="flaticon-vimeo"></i></a>
-							</li>
-						</ul>
-					</div>
-				</div>
-			</div>
-		</div>
-		<div class="hamburger-overlay"></div>
-		<!-- Hamburger Menu Start -->
+	
 	</div>
 	<!-- Header Menu End -->
 
@@ -120,8 +84,8 @@
     <ng-template carouselSlide>   
 			<img src="../../../assets/img/banner-1.png" alt="this is the first alt">
 			<div class="text-block">
-				<h4>Nature</h4>
-				<p>What a beautiful sunrise</p>
+				<h4></h4>
+				<p></p>
 			</div>
 
 		</ng-template>
@@ -577,7 +541,7 @@
 									</div>
 									<div class="choose-content">
 										<h3>Alanında Uzman</h3>
-										<p>Excepteur sint occaecat cupidatat proident, sunt in</p>
+										<p>25 yıllık tecrübemizle hizmetinizdeyiz.</p>
 									</div>
 								</div>
 							</div>
@@ -587,7 +551,7 @@
 									</div>
 									<div class="choose-content">
 										<h3>Hızlı ve Kaliteli </h3>
-										<p>Excepteur sint occaecat cupidatat proident, sunt in</p>
+										<p>Sizler için kaliteden ödün vermeden hızlı bir hizmet sunuyoruzç</p>
 									</div>
 								</div>
 							</div>
@@ -597,7 +561,7 @@
 									</div>
 									<div class="choose-content">
 										<h3>Güvenilir</h3>
-										<p>Excepteur sint occaecat cupidatat proident, sunt in</p>
+										<p>Tüm davalarımızı titizlikle inceleyip size özel hizmet veriyoruz.</p>
 									</div>
 								</div>
 							</div>
@@ -607,7 +571,7 @@
 									</div>
 									<div class="choose-content">
 										<h3>Başarılı</h3>
-										<p>Excepteur sint occaecat cupidatat proident, sunt in</p>
+										<p>Tecrübeli kadromuzla sayısız davayı müvekkillerimizin lehine sonuçlandırdık.</p>
 									</div>
 								</div>
 							</div>
@@ -631,25 +595,25 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-xl-6 col-lg-6">
-					<div class="section-title-left"> <span class="section-top">//  Free Quote</span>
-						<h2 class="mb-60">Get a free Consultation</h2>
+					<div class="section-title-left"> <span class="section-top">// Bize Ulaşın</span>
+						<h2 class="mb-60">Ücretsiz Danışmanlık </h2>
 						<div class="from-area">
 							<form #loginForm="ngForm" (submit)="getValues(loginForm.value)">
 								<div class="form-row">
 									<div class="form-group col-md-6">
-										<input type="text" ngModel class="form-control" id="fullName"name="name" placeholder="Name">
+										<input type="text" ngModel class="form-control" id="fullName"name="name" placeholder="İsim">
 									</div>
 									<div class="form-group col-md-6">
 										<input type="email"  ngModel class="form-control" id="email" name="email" placeholder="Email">
 									</div>
 								</div>
 								<div class="form-group">
-									<input type="text" ngModel class="form-control" id="subject" name="subject" placeholder="Subject">
+									<input type="text" ngModel class="form-control" id="subject" name="subject" placeholder="Konu">
 								</div>
 								<div class="form-group">
-									<textarea class="form-control" id="message" rows="2" name="message" placeholder="Message"></textarea>
+									<textarea class="form-control" id="message" rows="2" name="message" placeholder="Mesaj"></textarea>
 								</div>
-								<button type="submit" class="attoyer-btn">Send Massage</button>
+								<button type="submit" class="attoyer-btn">Mesajı Gönder</button>
 							</form>
 						</div>
 					</div>
