discover for more cevirildi

--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -153,7 +153,7 @@
 								<h2>Safa Hukuk Bürosu</h2>
 								<p class="pt-30 pb-35"></p>
 								<div class="about-buttom d-sm-flex">
-									<div class="about-btn"> <a class="attoyer-btn all-btn mr-100" href="#">Discover More</a>
+									<div class="about-btn"> <a class="attoyer-btn all-btn mr-100" href="#">Daha fazlası için tıklayın</a>
 									</div>
 									
 								</div>
