hizmetlerimiz resimleri degistirildi ,main slider resimleri degistirildi

--- a/hukuki/src/app/components/home/home.component.html
+++ b/hukuki/src/app/components/home/home.component.html
@@ -118,7 +118,7 @@
 		
   <owl-carousel-o [options]="customOptions">
     <ng-template carouselSlide>   
-			<img src="../../../assets/img/banner-1.png" alt="this is the first alt">
+			<img src="../../../assets/img/banner-2.png" alt="this is the first alt">
 			<div class="text-block">
 				<h4>Nature</h4>
 				<p>What a beautiful sunrise</p>
@@ -127,12 +127,12 @@
 		</ng-template>
 				 
     <ng-template carouselSlide> 
-			<img src="../../../assets/img/banner-2.png"
+			<img src="../../../assets/img/main-slider3.jpeg"
 			alt="this is the first al"> 
 
 		</ng-template>
 		<ng-template carouselSlide> 
-			<img src="../../../assets/img/banner-1.png" alt="this is the first alt" >
+			<img src="../../../assets/img/banner-2.png" alt="this is the first alt" >
 			 
 
 		</ng-template>  
@@ -175,7 +175,7 @@
 				<div class="col-xl-6 col-lg-6 md-mb-35">
 					<div class="about-left">
 						<div class="about-img">
-							<img src="assets/img/about.png" alt="">
+							<img src="assets/img/about.jpeg" alt="">
 						</div>
 						<div class="item-bounce about-shape">
 							<img src="assets/img/shape/ab-shape-1.png" alt="">
@@ -259,7 +259,7 @@
 
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/ceza.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -273,7 +273,7 @@
 		
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/dernekler.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -288,7 +288,7 @@
 	<div class="row card-row-size">
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/sirketler.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -331,7 +331,7 @@
 	<div class="row card-row-size">
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/borclar.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -345,7 +345,7 @@
 
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/isvesosyal.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -359,7 +359,7 @@
 		
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/isvesosyal.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -374,7 +374,7 @@
 	<div class="row card-row-size">
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/icra.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -388,7 +388,7 @@
 
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/yabancilar.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -402,7 +402,7 @@
 		
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/tuketici.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -418,7 +418,7 @@
 	<div class="row card-row-size">
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/idari.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -432,7 +432,7 @@
 
 		<div class="col-md ">
 			<div class="card" style="width: 22rem ;height: 15rem;">
-				<img class="card-img-top image-size" src="../../../assets/img/banner-1.png" alt="Card image cap"  > 
+				<img class="card-img-top image-size" src="../../../assets/img/vergi.jpeg" alt="Card image cap"  > 
 				<div class="card-img-overlay">
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
@@ -450,7 +450,7 @@
 					<h5 class="card-title"></h5>
 					<div class="card-footer text-center">
 					<h4 class="card-text-style">
-						Ceza Hukuku
+						Danismanlik Hizmeti
 					</h4>
 				  </div>
 				  </div>
@@ -632,7 +632,7 @@
 			<div class="row">
 				<div class="col-xl-6 col-lg-6">
 					<div class="section-title-left"> <span class="section-top">//  Free Quote</span>
-						<h2 class="mb-60">Get a free Consultation</h2>
+						<h2 class="mb-60">Ucretsiz danismanlik icin mesaj atin</h2>
 						<div class="from-area">
 							<form #loginForm="ngForm" (submit)="getValues(loginForm.value)">
 								<div class="form-row">
@@ -649,7 +649,7 @@
 								<div class="form-group">
 									<textarea class="form-control" id="message" rows="2" name="message" placeholder="Message"></textarea>
 								</div>
-								<button type="submit" class="attoyer-btn">Send Massage</button>
+								<button type="submit" class="attoyer-btn">Gonder</button>
 							</form>
 						</div>
 					</div>
